<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="20dp">

    <TextView
        android:id="@+id/cabeceraConfigura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_configura"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensaje"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/cabeceraConfigura"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/comenzarDesde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_comenzar"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/message"
        app:layout_constraintLeft_toLeftOf="@id/cabeceraConfigura"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"/>


    <RadioGroup
        android:id="@+id/comenzarDesdeGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/comenzarDesde"
        app:layout_constraintLeft_toLeftOf="@id/comenzarDesde"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp">
        <RadioButton
            android:id="@+id/posicionActual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_pos_act"
            android:textSize="10sp"
            />
        <RadioButton
            android:id="@+id/primerLugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_pri_lug"
            android:textSize="10sp"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/optimizarRuta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_opt_ruta"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/comenzarDesdeGroup"
        app:layout_constraintLeft_toLeftOf="@id/comenzarDesde"
        android:layout_marginTop="20dp"
        />

    <RadioGroup
        android:id="@+id/optimizarGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/optimizarRuta"
        app:layout_constraintLeft_toLeftOf="@id/optimizarRuta"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp">
        <RadioButton
            android:id="@+id/optimizarSi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_si"
            android:textSize="10sp"
            />
        <RadioButton
            android:id="@+id/optimizarNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_no"
            android:textSize="10sp"
            />
    </RadioGroup>

    <Button
        android:id="@+id/aceptarRuta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:background="@drawable/button_styles"
        app:layout_constraintTop_toBottomOf="@id/optimizarGroup"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/cancelarRuta"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/cancelarRuta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:background="@drawable/button_styles"
        app:layout_constraintTop_toTopOf="@id/aceptarRuta"
        app:layout_constraintLeft_toRightOf="@id/aceptarRuta"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>