<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="20dp">

    <TextView
        android:id="@+id/cabeceraFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/alert_que_hacer"
        android:textSize="30sp"
        android:textStyle="italic">
    </TextView>

    <RadioGroup
        android:id="@+id/accionRutaFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/cabeceraFav"
        app:layout_constraintLeft_toLeftOf="@id/cabeceraFav"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp">
        <RadioButton
            android:id="@+id/cargarRuta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_cargar"
            android:textSize="10sp"
            />
        <RadioButton
            android:id="@+id/editarRuta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_editar"
            android:textSize="10sp"
            />
        <RadioButton
            android:id="@+id/borrarRuta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_borrar"
            android:textSize="10sp"
            />
    </RadioGroup>

    <Button
        android:id="@+id/listoButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:background="@drawable/button_styles"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/accionRutaFav"
        app:layout_constraintLeft_toLeftOf="@id/accionRutaFav"
        app:layout_constraintRight_toRightOf="@id/accionRutaFav"/>

    <Button
        android:id="@+id/cancelarButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:background="@drawable/button_styles"
        app:layout_constraintTop_toTopOf="@id/listoButton"
        app:layout_constraintLeft_toRightOf="@id/listoButton"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>