<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="20dp">

    <TextView
        android:id="@+id/cabeceraMapType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/alert_tipo_mapa"
        android:textSize="30dp"
        android:textStyle="italic">
    </TextView>

    <RadioGroup
        android:id="@+id/mapType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/cabeceraMapType"
        app:layout_constraintLeft_toLeftOf="@id/cabeceraMapType"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp">
        <RadioButton
            android:id="@+id/mapa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mapa"
            android:textSize="12sp"
            android:layout_marginRight="10dp"/>
        <RadioButton
            android:id="@+id/autocomplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buscador"
            android:textSize="12sp"
            android:layout_marginLeft="10dp"/>
    </RadioGroup>

    <Button
        android:id="@+id/listoButton2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:background="@drawable/button_styles"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/mapType"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/cancelarButton2"/>

    <Button
        android:id="@+id/cancelarButton2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:background="@drawable/button_styles"
        app:layout_constraintTop_toTopOf="@id/listoButton2"
        app:layout_constraintLeft_toRightOf="@id/listoButton2"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>