<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="20dp">

    <ImageView
        android:id="@+id/fotoLugar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        app:layout_constraintTop_toBottomOf="@id/fotoLugar"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/direccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direccion"
        app:layout_constraintTop_toBottomOf="@id/nombre"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/abierto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esta_abierto"
        app:layout_constraintTop_toBottomOf="@id/direccion"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"/>

    <ImageView
        android:id="@+id/imagenTlf"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/abierto"
        app:layout_constraintLeft_toLeftOf="@id/fotoLugar"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_phone_call"/>

    <TextView
        android:id="@+id/tlf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/llamar"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/imagenTlf"
        app:layout_constraintLeft_toLeftOf="@id/imagenTlf"
        app:layout_constraintRight_toRightOf="@id/imagenTlf" />

    <ImageView
        android:id="@+id/imagenWeb"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="@id/imagenTlf"
        app:layout_constraintRight_toRightOf="@id/fotoLugar"
        android:src="@drawable/ic_web_site"/>

    <TextView
        android:id="@+id/web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sitio_web"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/imagenWeb"
        app:layout_constraintLeft_toLeftOf="@id/imagenWeb"
        app:layout_constraintRight_toRightOf="@id/imagenWeb" />

    <TextView
        android:id="@+id/nombreLugar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/nombre"
        app:layout_constraintLeft_toRightOf="@id/nombre"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:id="@+id/direccionLugar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/direccion"
        app:layout_constraintLeft_toRightOf="@id/direccion"
        android:layout_marginLeft="5dp" />

    <TextView
        android:id="@+id/estaAbierto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/abierto"
        app:layout_constraintLeft_toRightOf="@id/abierto"
        android:layout_marginLeft="5dp"/>

    <Button
        android:id="@+id/agregarLugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar"
        android:background="@drawable/button_styles"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/web"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/cancelarLugar"/>

    <Button
        android:id="@+id/cancelarLugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:background="@drawable/button_styles"
        app:layout_constraintTop_toTopOf="@id/agregarLugar"
        app:layout_constraintLeft_toRightOf="@id/agregarLugar"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>