<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="20dp">

    <TextView
        android:id="@+id/cabeceraGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar_fav"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/cabeceraNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_su_ruta"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/cabeceraGuardar"
        app:layout_constraintLeft_toLeftOf="@id/nombreRuta"
        android:layout_marginTop="30dp">
    </TextView>

    <EditText
        android:id="@+id/nombreRuta"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/borders"
        app:layout_constraintTop_toBottomOf="@id/cabeceraNombre"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </EditText>

    <Button
        android:id="@+id/guardarRuta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:background="@drawable/button_styles"
        app:layout_constraintTop_toBottomOf="@id/nombreRuta"
        android:layout_marginTop="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/cancelarGuardar"/>

    <Button
        android:id="@+id/cancelarGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:background="@drawable/button_styles"
        app:layout_constraintTop_toTopOf="@id/guardarRuta"
        app:layout_constraintLeft_toRightOf="@id/guardarRuta"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>