<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="20dp">

    <TextView
        android:id="@+id/cabeceraBorrarDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/borrar_datos"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/borrarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/cabeceraBorrarDatos"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </TextView>

    <CheckBox
        android:id="@+id/checkControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entendido_borrar"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/borrarText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </CheckBox>

    <Button
        android:id="@+id/borrarDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/borrar"
        android:background="@drawable/button_styles"
        app:layout_constraintTop_toBottomOf="@id/checkControl"
        android:layout_marginTop="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/cancelarBorrarDatos"/>

    <Button
        android:id="@+id/cancelarBorrarDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:background="@drawable/button_styles"
        app:layout_constraintTop_toTopOf="@id/borrarDatos"
        app:layout_constraintLeft_toRightOf="@id/borrarDatos"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>